fixing spacing on order page

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -180,6 +180,7 @@ p {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	max-width: 1050px;
 	gap: 1rem;
 }
 
